Fixed display title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MixFlow - DJ Transition Inspiration</title>
+    <title>We-DJ</title>
     <meta name="description" content="Discover perfect song transitions for your DJ sets. Find tracks that flow seamlessly together with BPM and key matching." />
     <meta name="author" content="MixFlow" />
 
